unpackaged/main/default/objects/Account/fields/Delta__c.field-meta.xml
<CustomField>
    <fullName>Delta__c</fullName>
    <label>Delta</label>
    <length>100</length>
    <type>Text</type>
</CustomField>