unpackaged/main/default/objects/Account/fields/Onboarding_Manager__c.field-meta.xml
<CustomField>
    <fullName>Onboarding_Manager__c</fullName>
    <label>Onboarding Manager</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Nathan@gs.com</fullName>
            </value>
            <value>
                <fullName>Dave@gs.com</fullName>
            </value>
            <value>
                <fullName>Fabio@gs.com</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>