unpackaged/main/default/objects/Account/fields/Test_Text_Field__c.field-meta.xml
<CustomField>
    <fullName>Test_Text_Field__c</fullName>
    <label>Test Text Field</label>
    <length>1200</length>
    <type>LongTextArea</type>
</CustomField>